fdo#67109: Order of XConstantsTypeDescription.getConstants is unspecified

...it looks like it used to be the order the constants appeared in the .idl
file, while now it happens to be the lexicographical order of the constant's
names.  For all the constant groups in com.sun.star.report the order expected by
the code appears to be the order of the constant's numeric values (which happens
to coincide with the order of appearance in the .idl files), so explicitly sort
them that way.

Change-Id: I550401b2742fffb7c96a7787498967a7cd78fff8